block moving without lags

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
   height="640"
   style="border: 1px solid black">
 </canvas>
+<input (keyup.arrowup) = "move('up')">
 <p>
   <button (click)="move('right')">Right</button>
   <button (click)="move('left')">Left</button>
