--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,2 @@
-<canvas
-  #game
-  id="maze"
-  width="640"
-  height="640"
-  style="border: 1px solid black">
+<canvas #game id="maze" width="740" height="640" style="border: 1px solid black">
 </canvas>
-<input (keyup.arrowup) = "move('up')">
-<p>
-  <button (click)="move('right')">Right</button>
-  <button (click)="move('left')">Left</button>
-  <button (click)="move('up')">Up</button>
-  <button (click)="move('down')">Down</button>
-</p>
