players have a timer and counter for the remaining path to finish

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,16 @@
-<canvas #game id="maze" width="740" height="640" style="border: 1px solid black">
-</canvas>
+<!-- <canvas #game id="maze" width="740" height="640" style="border: 1px solid black">
+</canvas> -->
+<!-- <nav class="navbar navbar-expand navbar-dark bg-dark">
+  <div class="navbar-nav">
+      <a class="nav-item nav-link" routerLink="/registration">Join to game</a>
+  </div>
+</nav> -->
+<div class="jumbotron">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-8 offset-sm-2">
+                <router-outlet></router-outlet>
+            </div>
+        </div>
+    </div>
+</div>
