now the game is divided into several rooms with different mazes

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -7,5 +7,7 @@
 
         <p class="way">{{remainingWay}} remaining to finish</p>
 
+        <button (click)="goBack()">go back</button>
+
     </div>
 </div>
