--- a/src/app/registration/register.component.html
+++ b/src/app/registration/register.component.html
@@ -1,14 +1,9 @@
-<form class="example-form">
-  <mat-form-field class="example-full-width">
-    <mat-label>Email</mat-label>
-    <input matInput 
-           placeholder="Ex. pat@example.com">
-    <mat-hint>Errors appear instantly!</mat-hint>
-    <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
-      Please enter a valid email address
-    </mat-error>
-    <mat-error *ngIf="emailFormControl.hasError('required')">
-      Email is <strong>required</strong>
-    </mat-error>
-  </mat-form-field>
-</form>
+<h3> Free rooms </h3>
+<div class="grid grid-pad">
+  <a *ngFor = "let room of rooms" class="col-1-4" routerLink="/detail/{{room.id}}">
+    <img style="float:left;width:120px;height:120px;" src={{room.image}} alt='image'>
+    <div class="module room">
+      <h4>{{room.name}}</h4>
+    </div>
+  </a>
+</div>  
